# fambrain-agents

./: .env.example  .gitignore  .npmrc  AGENTS.md  Dockerfile  Dockerfile.brain-service  README.md  docker-compose.yml  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  prisma.config.ts  vitest.config.ts
.cursor/rules/: main-next-app.mdc  module-folder-conventions.mdc  no-scene-hardcoding.mdc
apps/agents/: package.json
apps/agents/scripts/: clear-pipeline-cache.ts  diagnose-age-query.ts  golden-regression.ts  index-all-corpus.ts  parse-documents.ts  summarize-document.ts  verify-agent-schemas.ts  verify-analyst-empty-hits.ts  verify-composite-incremental.ts  verify-composite-route.ts  verify-confidence-tier.ts  verify-content-organizer.ts  verify-content-summarizer.ts  verify-doc-parser.ts  verify-embed-batches.ts  verify-fact-checker-pipeline.ts  verify-fact-checker.ts  (+17 more)
apps/brain-service/: package.json  tsconfig.json
apps/web/: eslint.config.mjs  next.config.ts  package.json  tsconfig.json
docs/: 01-project-overview.md  02-agent-flows.md  03-roadmap.md  04-pitfalls.md  05-architecture-v2-tool-orchestration.md  06-twelve-day-sprint.md  km-retrieval-design.md
experiments/: README.md
prisma/: schema.prisma
scripts/: chroma-install.sh  chroma-server.sh  dev-all.sh  index-all-corpus.ts  index-corpus.sh  migrate-doc-layout.mjs  migrate-doc-to-corpus-user.mjs  pack-deploy.sh  redis-ping.ts
src/: middleware.ts
src/actions/: auth.ts
src/agents/: types.ts
src/lib/: get-sidebar-conversations.ts  prisma.ts
tools/chroma-server/: pyproject.toml
(+659 files in other folders)
